--- a/Deposito/src/app/pages/frm-abm/abm-entrega-equipo-unidad/abm-entrega-equipo-unidad.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-entrega-equipo-unidad/abm-entrega-equipo-unidad.component.html
@@ -45,12 +45,14 @@
         <!-- select tipo alta -->
         <div class="form-group col-md-6" required>
           <app-filtrounidad
+            requerid
             [dibujar]="item.unidad"
             (resultado)="unidadesEncontradas($event)"
           ></app-filtrounidad>
         </div>
         <div class="form-group col-md-6" required>
           <app-filtro-equipo
+            requerid
             [dibujar]="item.equipo"
             (resultado)="equiposEncontrados($event)"
           ></app-filtro-equipo>
@@ -59,6 +61,7 @@
       <div class="row">
         <div class="form-group col-md-6">
           <app-fil-persona
+            requerid
             [dibujar]="item.recibe"
             (resultado)="personasEncontrados($event)"
           ></app-fil-persona>
