--- a/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
+++ b/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
@@ -25,7 +25,7 @@
 
         <div class="row {{ scroll(items) }}">
           <table
-            id="tabla"
+            id="tablaEquipos"
             *ngIf="items.length > 0"
             class="table table-striped table-inverse text-center"
           >
@@ -37,8 +37,11 @@
                 <th>Nro.serie|Id.Pol</th>
                 <th>Tipo Equipo</th>
                 <th>Unidad Entregada</th>
+                <th *ngIf="exportar">Tipo Entrega</th>
+                <th *ngIf="exportar">Motivo Entrega</th>
                 <th>Fecha Entrega</th>
-                <th>Acción</th>
+                <th *ngIf="exportar">Estado</th>
+                <th *ngIf="!exportar">Acción</th>
               </tr>
             </thead>
             <tbody>
@@ -50,8 +53,11 @@
                 </td>
                 <td>{{ item.equipo.tipoEquipo.nombre }}</td>
                 <td>{{ item.unidad.nombre }}</td>
+                <td *ngIf="exportar">{{ tipoEntrega(item.tipoEntrega) }}</td>
+                <td *ngIf="exportar">{{ motivoEntrega(item.nroNota) }}</td>
                 <td>{{ item.fechaEntrega | date: "dd/MM/yyyy" }}</td>
-                <td>
+                <td *ngIf="exportar">{{ item.equipo.estado.nombre }}</td>
+                <td *ngIf="!exportar">
                   <div class="row">
                     <div class="col-md-6">
                       <button
@@ -137,7 +143,7 @@
 
     <button
       *ngIf="items.length > 0"
-      (click)="exportTableToExcel('tabla', 'Equipos_entregados')"
+      (click)="exportTableToExcel('tablaEquipos', 'Equipos_entregados')"
       class="btn btn-outline-success flotante"
     >
       <i class="far fa-file-excel"></i>
