--- a/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.scss
+++ b/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.scss
@@ -1,58 +1,58 @@
-h3{
-    color: black;
+h3 {
+  color: black;
 }
-.card{
-background-color: #E8FFFF !important;    
+.card {
+  background-color: #e8ffff !important;
 }
-b{
-    font-size: 30px;
+b {
+  font-size: 30px;
 }
-span{
-    color: red !important;
-    font-size: 30px;
+span {
+  color: red !important;
+  font-size: 30px;
 }
-.modal-title{
-    color: blue !important;
+.modal-title {
+  color: blue !important;
 }
-.table-light{
-    color: #E8FFFF;
+.table-light {
+  color: #e8ffff;
 }
-#modal-title{
-    color: black !important;
+#modal-title {
+  color: black !important;
 }
 
 //boton flotante
 .flotante {
-	font-size: 12px; /* Cambiar el tamaño de la tipografia */
-	text-transform: uppercase; /* Texto en mayusculas */
-	font-weight: bold; /* Fuente en negrita o bold */
-	color: #ffffff; /* Color del texto */
-	border-radius: 9px; /* Borde del boton */
-	letter-spacing: 2px; /* Espacio entre letras */
-	background-color: #6976bd; /* Color de fondo */
-	padding: 13px 10px; /* Relleno del boton */
-	position: fixed;
-	bottom: 70px;
-	right: 8em;
-	transition: all 300ms ease 0ms;
-	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-	z-index: 99;
+  font-size: 12px; /* Cambiar el tamaño de la tipografia */
+  text-transform: uppercase; /* Texto en mayusculas */
+  font-weight: bold; /* Fuente en negrita o bold */
+  color: #ffffff; /* Color del texto */
+  border-radius: 9px; /* Borde del boton */
+  letter-spacing: 2px; /* Espacio entre letras */
+  background-color: #6976bd; /* Color de fondo */
+  padding: 13px 10px; /* Relleno del boton */
+  position: fixed;
+  bottom: 70px;
+  right: 8em;
+  transition: all 300ms ease 0ms;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  z-index: 99;
 }
 .flotante:hover {
-	background-color: #0dc535; /* Color de fondo al pasar el cursor */
-	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
-	transform: translateY(-7px);
+  background-color: #0dc535; /* Color de fondo al pasar el cursor */
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+  transform: translateY(-7px);
 }
 @media only screen and (max-width: 500px) {
- 	.flotante {
-		font-size: 14px;
-		padding: 12px 20px;
-		bottom: 20px;
-		right: 20px;
-	}
+  .flotante {
+    font-size: 14px;
+    padding: 12px 20px;
+    bottom: 20px;
+    right: 20px;
+  }
 }
 
-thead tr th { 
+thead tr th {
   position: sticky;
   top: 0;
   z-index: 10;
@@ -60,9 +60,8 @@ thead tr th {
   color: #ffffff !important;
 }
 .table-responsive {
-  height:400px;
-  overflow:scroll;
-  overflow-x: hidden;
-  
+  height: 400px;
+  overflow: scroll;
+  //overflow-x: hidden;
+  overflow-x: auto;
 }
-
