--- a/Deposito/src/app/pages/lst/lst-marca/lst-marca.component.scss
+++ b/Deposito/src/app/pages/lst/lst-marca/lst-marca.component.scss
@@ -1,13 +1,18 @@
-h3{
-    color: black;
+h3 {
+  color: black;
 }
-.card{
-background-color: #E8FFFF !important;    
+.card {
+  background-color: #e8ffff !important;
 }
-b{
-    font-size: 30px;
+b {
+  font-size: 30px;
 }
 
-.table-light{
-    color: #E8FFFF;
+.table-light {
+  background-color: #4fbdba !important;
+  color: #e8ffff;
+}
+table {
+  padding: 0% !important;
+  font-size: 13px !important;
 }
