--- a/Deposito/src/app/pages/compartido/footer/footer.component.scss
+++ b/Deposito/src/app/pages/compartido/footer/footer.component.scss
@@ -1,11 +1,15 @@
 footer {
-    color: white;
-    width: 100%;
-    background-color: #6976bd;
-    min-height: 250px;
-    padding: 10px 0px 25px 0px;
+  color: white;
+  width: 100%;
+  background-color: #6976bd;
+  min-height: 250px;
+  padding: 10px 0px 25px 0px;
 }
-img{
-    height: 75%;
-    width: 20%;
+img {
+  height: 75%;
+  width: 20%;
+}
+b {
+  color: black !important;
+  font-size: 12px;
 }
