--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.scss
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.scss
@@ -87,7 +87,7 @@ thead tr th {
   position: sticky;
   top: 0;
   z-index: 10;
-  background-color: black;
+  background-color: #4fbdba;
 }
 .table-responsive {
   height: 400px;
@@ -98,4 +98,8 @@ thead tr th {
 
 .btn-secondary {
   background-color: #596bd3;
+}
+table {
+  padding: 0% !important;
+  font-size: 13px !important;
 }
